--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 assets
 # OS generated files #
 ######################
-.DS_Store
+*.DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
@@ -9,3 +9,5 @@ assets
 ehthumbs.db
 Thumbs.db
 *.psd
+*.crdownload
+.DS_Store
